Update sequence diagram for journalforing
Generate pdf content for registrering data on server side

Update oyeblikksbilde endpoint to return if document is journalfort

Archive only relevant data sources for vedtak

Include behovsvurdering, registering and CV data in document archive